# IT-Edit

./: README.rst  index.html  params.json
it-edit-2.0/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac
it-edit-2.0/data/: Makefile.am  Makefile.in
it-edit-2.0/data/README/: README.html  index.html  objects.inv  search.html  searchindex.js
it-edit-2.0/desktop/: Makefile.am  Makefile.in
it-edit-2.0/doc/: Makefile.in  it-edit.html
it-edit-2.0/man/: Makefile.in  it-edit.1
it-edit-2.0/source/: Makefile.am  Makefile.in  main.c
it-edit-2.0/source/Callbacks/: configuration_callbacks.c  configuration_callbacks.h  edition_callbacks.c  edition_callbacks.h  editor_callbacks.c  editor_callbacks.h  files_callbacks.c  files_callbacks.h  gui_callbacks.c  gui_callbacks.h  highlight_selection_callbacks.c  highlight_selection_callbacks.h  search_settings_callbacks.c  search_settings_callbacks.h  terminals_callbacks.c  terminals_callbacks.h
it-edit-2.0/source/Configuration/: configuration.c  configuration.h
it-edit-2.0/source/DEBUG/: debug_search_by_signals.c  debug_search_by_signals.h
it-edit-2.0/source/Editor/: editor.c  editor.h
it-edit-2.0/source/GUI/configure/: configuration_dialog.c  configuration_dialog.h  configure_gui_elements.c  configure_gui_elements.h
it-edit-2.0/source/GUI/dialogs/: dialogs.c  dialogs.h  message_dialog.c  message_dialog.h
it-edit-2.0/source/GUI/setup/: setup_gui.c  setup_gui.h
it-edit-2.0/source/Headers/: defines.h  global_vars.c  global_vars.h  includes.h
it-edit-2.0/source/Headers/Structures/: GUI_structures.h  editor_structures.h  setting_structure.h
it-edit-2.0/source/Resizer/: Resizer.c  Resizer.h
it-edit-2.0/texi/: Makefile.in  it-edit.info  it-edit.texi
