SUBDIRS = . source data man texi desktop doc

nobase_pkgdata_DATA   =       ./source/*.c \
                              ./source/Callbacks/*.c \
                              ./source/Callbacks/*.h \
                              ./source/GUI/configure/*.c \
                              ./source/GUI/configure/*.h \
                              ./source/GUI/dialogs/*.c \
                              ./source/GUI/dialogs/*.h \
                              ./source/GUI/setup/*.c \
                              ./source/GUI/setup/*.h \
                              ./source/Editor/*.c \
                              ./source/Editor/*.h \
                              ./source/Resizer/*.c \
                              ./source/Resizer/*.h \
                              ./source/Configuration/*.c \
                              ./source/Configuration/*.h \
                              ./source/DEBUG/*.c \
                              ./source/DEBUG/*.h \
                              ./source/Headers/*.c \
                              ./source/Headers/*.h \
                              ./source/Headers/Structures/*.h
                             
                             
EXTRA_DIST = ./CONTRIBUTORS                             