  
nobase_dist_pkgdata_DATA   =      ./*.zip                         \
                             ./Files_handler/*.conf          \
                             ./Icons/*.png                   \
                             ./Icons/16x16/*.png             \
                             ./Icons/16x16/mimetypes/*.png   \
                             ./Icons/22x22/*.png             \
                             ./Icons/64x64/mimetypes/*.png   \
                             ./License/*.html                \
                             ./License/*.txt                 \
                             ./README/*.html                 \
                             ./README/*.inv                  \
                             ./README/*.js                   \
                             ./README/_static/*.gif          \
                             ./README/_static/*.css          \
                             ./README/_static/*.js           \
                             ./README/_sources/*.txt         \
                             ./Styles/*.sh                   \
                             ./Styles/*.xml                  \
                             ./Styles/*.rng                  \
                             ./Textures/Textures/*.bmp       \
                             ./Textures/Textures_tiny/*.png  \
                             ./Textures/Textures_tiny/*.bmp


